--- a/drink.html
+++ b/drink.html
@@ -48,7 +48,73 @@
       </ul>
     </div>
     <div class="last-updated">（最終更新 2025/08/08 15:20）</div>
-    
+
+    <div class="drink-list-container">
+      <h2>アルコール</h2>
+      <div class="table-scroll-container">
+        <table class="drink-table">
+            <thead>
+            <tr>
+                <th>品名</th>
+                <th>内容量</th>
+                <th>数量</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="drink-list-container">
+      <h2>ソフトドリンク</h2>
+      <div class="table-scroll-container">
+        <table class="drink-table">
+            <thead>
+            <tr>
+                <th>品名</th>
+                <th>内容量</th>
+                <th>数量</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="drink-list-container">
+      <h2>お菓子</h2>
+      <div class="table-scroll-container">
+        <table class="drink-table">
+            <thead>
+            <tr>
+                <th>品名</th>
+                <th>内容量</th>
+                <th>数量</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            </tbody>
+        </table>
+      </div>
+    </div>
+
 
     <script src="js/script.js"></script>
 </body>
