--- a/drink.html
+++ b/drink.html
@@ -50,7 +50,9 @@
     <div class="last-updated">（最終更新 2025/08/08 15:20）</div>
 
     <div class="drink-list-container">
-      <h2>アルコール</h2>
+      <div class="h2-wrapper">
+        <h2>アルコール</h2>
+      </div>
       <div class="table-scroll-container">
         <table class="drink-table">
             <thead>
@@ -66,13 +68,30 @@
                 <td></td>
                 <td></td>
             </tr>
+            <tr class="accordion-header">
+                <td>ほろよい</td>
+                <td>350ml</td>
+                <td>50</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- 桃</td>
+                <td>-</td>
+                <td>20</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- ホワイトサワー</td>
+                <td>-</td>
+                <td>30</td>
+            </tr>
             </tbody>
         </table>
       </div>
     </div>
 
     <div class="drink-list-container">
-      <h2>ソフトドリンク</h2>
+      <div class="h2-wrapper">
+        <h2>ソフトドリンク</h2>
+      </div>
       <div class="table-scroll-container">
         <table class="drink-table">
             <thead>
@@ -84,6 +103,21 @@
             </thead>
             <tbody>
             <tr>
+                <td>おーいお茶</td>
+                <td>1500ml</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -94,7 +128,9 @@
     </div>
 
     <div class="drink-list-container">
-      <h2>お菓子</h2>
+      <div class="h2-wrapper">
+        <h2>お菓子</h2>
+      </div>
       <div class="table-scroll-container">
         <table class="drink-table">
             <thead>
