--- a/drink.html
+++ b/drink.html
@@ -68,7 +68,7 @@
                 <td></td>
                 <td></td>
             </tr>
-            <tr class="accordion-header">
+            <tr class="accordion-toggle">
                 <td>ほろよい</td>
                 <td>350ml</td>
                 <td>50</td>
