--- a/drink.html
+++ b/drink.html
@@ -64,9 +64,9 @@
             </thead>
             <tbody>
             <tr>
+                <td>濃いめのレモンサワー</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td>6</td>
             </tr>
             <tr class="accordion-toggle">
                 <td>ほろよい</td>
@@ -75,13 +75,33 @@
             </tr>
             <tr class="accordion-content">
                 <td>- 桃</td>
-                <td>-</td>
-                <td>20</td>
+                <td>350ml</td>
+                <td>3</td>
             </tr>
             <tr class="accordion-content">
-                <td>- ホワイトサワー</td>
-                <td>-</td>
-                <td>30</td>
+                <td>- 白いサワー</td>
+                <td>350ml</td>
+                <td>6</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- シュワピタサワー</td>
+                <td>350ml</td>
+                <td>2</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- カシスとオレンジ</td>
+                <td>350ml</td>
+                <td>6</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- 冷やしパイン</td>
+                <td>350ml</td>
+                <td>6</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- アイスティー</td>
+                <td>350ml</td>
+                <td>1</td>
             </tr>
             </tbody>
         </table>
