--- a/drink.html
+++ b/drink.html
@@ -71,7 +71,7 @@
             <tr class="accordion-toggle">
                 <td>ほろよい</td>
                 <td>350ml</td>
-                <td>50</td>
+                <td>24</td>
             </tr>
             <tr class="accordion-content">
                 <td>- 桃</td>
@@ -102,6 +102,36 @@
                 <td>- アイスティー</td>
                 <td>350ml</td>
                 <td>1</td>
+            </tr>
+            <tr class="accordion-toggle">
+                <td>氷結</td>
+                <td>350ml</td>
+                <td>12</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- 無糖レモン4%</td>
+                <td>350ml</td>
+                <td>4</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- 無糖レモン7%</td>
+                <td>350ml</td>
+                <td>4</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- シャルドネスパークリング</td>
+                <td>350ml</td>
+                <td>4</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- カシスとオレンジ</td>
+                <td>350ml</td>
+                <td>6</td>
+            </tr>
+            <tr class="accordion-content">
+                <td>- 冷やしパイン</td>
+                <td>350ml</td>
+                <td>6</td>
             </tr>
             </tbody>
         </table>
