--- a/drink.html
+++ b/drink.html
@@ -69,69 +69,40 @@
                 <td>6</td>
             </tr>
             <tr class="accordion-toggle">
-                <td>ほろよい</td>
-                <td>350ml</td>
-                <td>24</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- 桃</td>
-                <td>350ml</td>
-                <td>3</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- 白いサワー</td>
-                <td>350ml</td>
-                <td>6</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- シュワピタサワー</td>
-                <td>350ml</td>
-                <td>2</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- カシスとオレンジ</td>
-                <td>350ml</td>
-                <td>6</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- 冷やしパイン</td>
-                <td>350ml</td>
-                <td>6</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- アイスティー</td>
-                <td>350ml</td>
-                <td>1</td>
+                <td colspan="3">ほろよい</td> </tr>
+            <tr class="accordion-wrapper">
+                <td colspan="3">
+                    <table class="nested-table">
+                        <tr>
+                            <td>- 桃</td>
+                            <td>-</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <td>- ホワイトサワー</td>
+                            <td>-</td>
+                            <td>30</td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
             <tr class="accordion-toggle">
-                <td>氷結</td>
-                <td>350ml</td>
-                <td>12</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- 無糖レモン4%</td>
-                <td>350ml</td>
-                <td>4</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- 無糖レモン7%</td>
-                <td>350ml</td>
-                <td>4</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- シャルドネスパークリング</td>
-                <td>350ml</td>
-                <td>4</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- カシスとオレンジ</td>
-                <td>350ml</td>
-                <td>6</td>
-            </tr>
-            <tr class="accordion-content">
-                <td>- 冷やしパイン</td>
-                <td>350ml</td>
-                <td>6</td>
+                <td colspan="3">ほろよい</td> </tr>
+            <tr class="accordion-wrapper">
+                <td colspan="3">
+                    <table class="nested-table">
+                        <tr>
+                            <td>- 桃</td>
+                            <td>-</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <td>- ホワイトサワー</td>
+                            <td>-</td>
+                            <td>30</td>
+                        </tr>
+                    </table>
+                </td>
             </tr>
             </tbody>
         </table>
