--- a/drink.html
+++ b/drink.html
@@ -68,42 +68,36 @@
                 <td></td>
                 <td>6</td>
             </tr>
-            <tr class="accordion-toggle">
-                <td colspan="3">ほろよい</td> </tr>
-            <tr class="accordion-wrapper">
-                <td colspan="3">
-                    <table class="nested-table">
-                        <tr>
-                            <td>- 桃</td>
-                            <td>-</td>
-                            <td>20</td>
-                        </tr>
-                        <tr>
-                            <td>- ホワイトサワー</td>
-                            <td>-</td>
-                            <td>30</td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            <tr class="accordion-toggle">
-                <td colspan="3">ほろよい</td> </tr>
-            <tr class="accordion-wrapper">
-                <td colspan="3">
-                    <table class="nested-table">
-                        <tr>
-                            <td>- 桃</td>
-                            <td>-</td>
-                            <td>20</td>
-                        </tr>
-                        <tr>
-                            <td>- ホワイトサワー</td>
-                            <td>-</td>
-                            <td>30</td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
+            <div class="accordion-item">
+              <div class="accordion-toggle">
+                ほろよい
+              </div>
+              <div class="accordion-content">
+                <table class="nested-table">
+                  <tr>
+                    <td>- 桃</td>
+                    <td>-</td>
+                    <td>20</td>
+                  </tr>
+                  <tr>
+                    <td>- ホワイトサワー</td>
+                    <td>-</td>
+                    <td>30</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <div class="accordion-toggle">
+                氷結
+              </div>
+              <div class="accordion-content">
+                <table class="nested-table">
+                </table>
+              </div>
+            </div>
+
             </tbody>
         </table>
       </div>
