--- a/drink.html
+++ b/drink.html
@@ -52,37 +52,45 @@
     <div class="drink-list-container">
     <h2>アルコール</h2>
     
-    <div class="accordion-item">
-        <div class="accordion-toggle">
-            ほろよい
+    <div class="table-scroll-container">
+        <div class="table-header">
+            <div class="item-cell">品名</div>
+            <div class="size-cell">内容量</div>
+            <div class="quantity-cell">数量</div>
         </div>
-        <div class="accordion-content">
-            <table class="nested-table">
-                <tr>
-                    <td>- 桃</td>
-                    <td>-</td>
-                    <td>20</td>
-                </tr>
-                <tr>
-                    <td>- ホワイトサワー</td>
-                    <td>-</td>
-                    <td>30</td>
-                </tr>
-            </table>
+
+        <div class="accordion-item">
+            <div class="accordion-toggle">
+                <div class="item-cell">ほろよい</div>
+                <div class="size-cell">350ml</div>
+                <div class="quantity-cell">50</div>
+            </div>
+            <div class="accordion-content">
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- 桃</div>
+                    <div class="size-cell">-</div>
+                    <div class="quantity-cell">20</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- ホワイトサワー</div>
+                    <div class="size-cell">-</div>
+                    <div class="quantity-cell">30</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="accordion-item">
+            <div class="accordion-toggle">
+                <div class="item-cell">氷結</div>
+                <div class="size-cell">500ml</div>
+                <div class="quantity-cell">30</div>
+            </div>
+            <div class="accordion-content">
+            </div>
         </div>
     </div>
-
-    <div class="accordion-item">
-        <div class="accordion-toggle">
-            氷結
-        </div>
-        <div class="accordion-content">
-            <table class="nested-table">
-                </table>
-        </div>
     </div>
 
-</div>
 
 
 
