--- a/drink.html
+++ b/drink.html
@@ -50,8 +50,9 @@
     <div class="last-updated">（最終更新 2025/08/08 15:20）</div>
 
     <div class="drink-list-container">
-    <h2>アルコール</h2>
-    
+    <div class="h2-wrapper">
+        <h2>アルコール</h2>
+    </div>
     <div class="table-scroll-container">
         <div class="table-header">
             <div class="item-cell">品名</div>
