--- a/drink.html
+++ b/drink.html
@@ -64,18 +64,38 @@
             <div class="accordion-toggle">
                 <div class="item-cell">ほろよい</div>
                 <div class="size-cell">350ml</div>
-                <div class="quantity-cell">50</div>
+                <div class="quantity-cell">計24</div>
             </div>
             <div class="accordion-content">
                 <div class="sub-item-row">
                     <div class="item-cell sub-item">- 桃</div>
-                    <div class="size-cell">-</div>
-                    <div class="quantity-cell">20</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">3</div>
                 </div>
                 <div class="sub-item-row">
-                    <div class="item-cell sub-item">- ホワイトサワー</div>
-                    <div class="size-cell">-</div>
-                    <div class="quantity-cell">30</div>
+                    <div class="item-cell sub-item">- 白いサワー</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">6</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- シュワピタサワー</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">2</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- カシスとオレンジ</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">6</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- 冷やしパイン</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">6</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- アイスティー</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">1</div>
                 </div>
             </div>
         </div>
@@ -83,11 +103,31 @@
         <div class="accordion-item">
             <div class="accordion-toggle">
                 <div class="item-cell">氷結</div>
-                <div class="size-cell">500ml</div>
-                <div class="quantity-cell">30</div>
+                <div class="size-cell">350ml</div>
+                <div class="quantity-cell">計12</div>
             </div>
             <div class="accordion-content">
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- 無糖レモン4%</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">4</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- 無糖レモン7%</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">4</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- シャルドネスパークリング</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">4</div>
+                </div>
             </div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">濃いめレモンサワー</div>
+            <div class="size-cell">350ml</div>
+            <div class="quantity-cell">6</div>
         </div>
     </div>
     </div>
