--- a/drink.html
+++ b/drink.html
@@ -43,11 +43,11 @@
     <div class="notes-box">
       <h4>飲み物・お菓子について</h4>
       <ul>
-        <li>宴会やレク用にサークルで買った飲み物やお菓子は、近日こちらで公開予定です。</li>
+        <li>宴会やレク用にサークルで買った飲み物やお菓子です。</li>
         <li>「これも欲しい！」というものがあれば、自由に持ち込みOKです。</li>
       </ul>
     </div>
-    <div class="last-updated">（最終更新 2025/08/08 15:20）</div>
+    <div class="last-updated">（最終更新 2025/08/08 18:20）</div>
 
     <div class="drink-list-container">
       <div class="h2-wrapper">
@@ -100,6 +100,68 @@
             </div>
         </div>
 
+        <div class="accordion-item">
+            <div class="accordion-toggle">
+                <div class="item-cell">氷結</div>
+                <div class="size-cell">350ml</div>
+                <div class="quantity-cell">計12</div>
+            </div>
+            <div class="accordion-content">
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- 無糖レモン4%</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">4</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- 無糖レモン7%</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">4</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- シャルドネスパークリング</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">4</div>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <div class="accordion-toggle">
+                <div class="item-cell">こだわり酒場</div>
+                <div class="size-cell">350ml</div>
+                <div class="quantity-cell">計9</div>
+            </div>
+            <div class="accordion-content">
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- レモンサワー</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">7</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- タコハイ</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">2</div>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <div class="accordion-toggle">
+                <div class="item-cell">贅沢搾り</div>
+                <div class="size-cell">350ml</div>
+                <div class="quantity-cell">計2</div>
+            </div>
+            <div class="accordion-content">
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- グレープフルーツ</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">1</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- プレミアムトマト</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">1</div>
+                </div>
+            </div>
+        </div>
         <div class="accordion-item">
             <div class="accordion-toggle">
                 <div class="item-cell">氷結</div>
