--- a/drink.html
+++ b/drink.html
@@ -164,25 +164,30 @@
         </div>
         <div class="accordion-item">
             <div class="accordion-toggle">
-                <div class="item-cell">氷結</div>
-                <div class="size-cell">350ml</div>
-                <div class="quantity-cell">計12</div>
+                <div class="item-cell">ビール</div>
+                <div class="size-cell">-</div>
+                <div class="quantity-cell">計18</div>
             </div>
             <div class="accordion-content">
                 <div class="sub-item-row">
-                    <div class="item-cell sub-item">- 無糖レモン4%</div>
+                    <div class="item-cell sub-item">- サントリー生ビール</div>
                     <div class="size-cell">350ml</div>
-                    <div class="quantity-cell">4</div>
+                    <div class="quantity-cell">6</div>
                 </div>
                 <div class="sub-item-row">
-                    <div class="item-cell sub-item">- 無糖レモン7%</div>
-                    <div class="size-cell">350ml</div>
-                    <div class="quantity-cell">4</div>
+                    <div class="item-cell sub-item">- 金麦</div>
+                    <div class="size-cell">500ml</div>
+                    <div class="quantity-cell">6</div>
                 </div>
                 <div class="sub-item-row">
-                    <div class="item-cell sub-item">- シャルドネスパークリング</div>
+                    <div class="item-cell sub-item">- アサヒ生ビール</div>
                     <div class="size-cell">350ml</div>
-                    <div class="quantity-cell">4</div>
+                    <div class="quantity-cell">6</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- ハイネケン</div>
+                    <div class="size-cell">350ml</div>
+                    <div class="quantity-cell">3</div>
                 </div>
             </div>
         </div>
@@ -190,6 +195,19 @@
             <div class="item-cell">濃いめレモンサワー</div>
             <div class="size-cell">350ml</div>
             <div class="quantity-cell">6</div>
+        </div>
+    </div>
+    </div>
+
+    <div class="drink-list-container">
+      <div class="h2-wrapper">
+        <h2>アルコール</h2>
+      </div>
+    <div class="table-scroll-container">
+        <div class="table-header">
+            <div class="item-cell">品名</div>
+            <div class="size-cell">内容量</div>
+            <div class="quantity-cell">数量</div>
         </div>
     </div>
     </div>
