--- a/drink.html
+++ b/drink.html
@@ -201,7 +201,7 @@
 
     <div class="drink-list-container">
       <div class="h2-wrapper">
-        <h2>アルコール</h2>
+        <h2>ソフトドリンク</h2>
       </div>
     <div class="table-scroll-container">
         <div class="table-header">
@@ -212,72 +212,18 @@
     </div>
     </div>
 
-
-
-
-    <div class="drink-list-container">
-      <div class="h2-wrapper">
-        <h2>ソフトドリンク</h2>
-      </div>
-      <div class="table-scroll-container">
-        <table class="drink-table">
-            <thead>
-            <tr>
-                <th>品名</th>
-                <th>内容量</th>
-                <th>数量</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>おーいお茶</td>
-                <td>1500ml</td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
-      </div>
-    </div>
-
     <div class="drink-list-container">
       <div class="h2-wrapper">
         <h2>お菓子</h2>
       </div>
-      <div class="table-scroll-container">
-        <table class="drink-table">
-            <thead>
-            <tr>
-                <th>品名</th>
-                <th>内容量</th>
-                <th>数量</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
-      </div>
+    <div class="table-scroll-container">
+        <div class="table-header">
+            <div class="item-cell">品名</div>
+            <div class="size-cell">内容量</div>
+            <div class="quantity-cell">数量</div>
+        </div>
     </div>
-
+    </div>
 
     <script src="js/script.js"></script>
 </body>
